--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -37,7 +37,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    width: 50%;
+    text-align: left;
+    width: 380px;
+    height:380px;
     padding:0;
 }
 
@@ -52,7 +54,7 @@
     -webkit-text-fill-color: rgba(255, 255, 255, 0.505);
     font-size: 32px;
     line-height: 32px;
-    font-weight: 700;
+    font-weight: 500;
     font-family: 'Ysabeau SC', sans-serif;
     margin-top: 0px;
     margin-bottom: 20px;
@@ -92,8 +94,8 @@
     -webkit-text-fill-color: rgba(255, 255, 255, 0.505);
     font-size: 32px;
     line-height: 32px;
-    font-weight: 700;
-    text-align: left;
+    font-weight: 500;
+    text-align: center;
     font-family: 'Ysabeau SC', sans-serif;
     margin-top: 0px;
     margin-bottom: 20px;
@@ -137,7 +139,6 @@
     margin-top: 0px;
     margin-bottom: 0px;
     font-family: 'Ysabeau SC', sans-serif;
-    font-weight: 700;
     white-space: nowrap;
     overflow: hidden;
     display: inline-block;
