--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -57,6 +57,26 @@
     transform: scale(1.05); /* Légère mise en avant */
 }
 
+.icon-blog-intro, .fa-hand-pointer, .fa-desktop, .fa-handshake {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2em;
+    color: #61DAFB;
+    border-radius: 50%;
+    width:60px;
+    height:60px;
+    border:5px solid #61DAFB;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+}
+
+.fa-hand-pointer {
+    transform: rotate(180deg);
+}
+
 .blog-link {
     position: relative;
     font-family: 'Ysabeau SC', sans-serif;
@@ -117,7 +137,7 @@
     position: relative;
     padding-left: 30px;
     font-family: 'Ysabeau SC', sans-serif;
-    line-height: 1.5;
+    line-height: 1.2em;
     opacity: 0;
     animation: fadeInUp 1.2s ease-in-out;
     transition: color 0.3s ease, transform 0.3s ease;
