--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -23,34 +23,34 @@
 }
 
 .container-contact .fa-envelope {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2em;
     color: #61DAFB;
-    font-size: 32px;
+    border-radius: 50%;
+    width:60px;
+    height:60px;
+    border:5px solid #61DAFB;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 60px;
 }
 
-.title-contact {
+.container-contact #title-form-contact {
     font-family: 'Ysabeau SC', sans-serif;
     color:#61DAFB;
     font-size: 28px;
     position: relative;
-    animation-name: text;
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
+    transition: transform 0.3s ease, text-shadow 0.3s ease;
 }
 
-@keyframes text {
-    0% {
-        color: linear-gradient(135deg, #0d0d0d, #292929);
-    }
-    30% {
-        letter-spacing: 16px;
-    }
-    85% {
-        letter-spacing: 6px;
-    }
-    100% {
-        letter-spacing: 6px;
-    }
+/* Effet de survol pour les titres */
+.container-contact #title-form-contact:hover {
+    color: #61DAFB; /* Change la couleur du texte */
+    text-shadow: 0 0 15px #61DAFB, 0 0 20px #61DAFB; /* Ajoute un effet de brillance */
+    transform: scale(1.05); /* Légère mise en avant */
 }
 
 .subtitle-contact {
@@ -137,20 +137,6 @@
     .title-contact {
         font-size: 20px;
         line-height: 20px;
-    }
-    @keyframes text {
-        0% {
-            color: linear-gradient(135deg, #0d0d0d, #292929);
-        }
-        30% {
-            letter-spacing: 8px;
-        }
-        85% {
-            letter-spacing: 2px;
-        }
-        100% {
-            letter-spacing: 2px;
-        }
     }
 
     .subtitle-contact {
