--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -289,6 +289,7 @@
     .container-txt {
         align-items: center;
         width: 100%;
+        height:180px;
     }
 
     .container-screens {
