--- a/src/pages/Avis/avis.css
+++ b/src/pages/Avis/avis.css
@@ -18,21 +18,35 @@
 }
 
 .fa-edit {
-    width: 100%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2em;
     color: #61DAFB;
-    font-size: 32px;
+    border-radius: 50%;
+    width:60px;
+    height:60px;
+    border:5px solid #61DAFB;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 60px;
-    text-align: center;
+
 }
 
-.title-contact {
+.title-avis {
     font-family: 'Ysabeau SC', sans-serif;
     color:#61DAFB;
     font-size: 28px;
     position: relative;
-    animation-name: text;
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
+    transition: transform 0.3s ease, text-shadow 0.3s ease;
+}
+
+/* Effet de survol pour les titres */
+.title-avis:hover {
+    color: #61DAFB; /* Change la couleur du texte */
+    text-shadow: 0 0 15px #61DAFB, 0 0 20px #61DAFB; /* Ajoute un effet de brillance */
+    transform: scale(1.05); /* Légère mise en avant */
 }
 
 .slider {
@@ -215,6 +229,13 @@
 .review-form button span {
     position: relative;
     z-index: 1; 
+}
+
+.error {
+    font-family: 'Ysabeau SC', sans-serif;
+    color: red; 
+    font-size: 22px;
+    text-align: left;
 }
 
 @media (max-width: 768px) {
