--- a/src/pages/Services/services.css
+++ b/src/pages/Services/services.css
@@ -17,8 +17,18 @@
 }
 
 .container-services .fa-cubes {
-    color:#61DAFB;
-    font-size: 32px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2em;
+    color: #61DAFB;
+    border-radius: 50%;
+    width:60px;
+    height:60px;
+    border:5px solid #61DAFB;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 70px;
 }
 
@@ -30,24 +40,14 @@
     font-size: 28px;
     background: black;
     position: relative;
-    animation-name: text;
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
-    }
+    transition: transform 0.3s ease, text-shadow 0.3s ease;
+}
 
-@keyframes text {
-    0% {
-        color: #202020;
-    }
-    30% {
-        letter-spacing: 16px;
-    }
-    85% {
-        letter-spacing: 6px;
-    }
-    100% {
-        letter-spacing: 6px;
-    }
+/* Effet de survol pour les titres */
+.services-title:hover {
+    color: #61DAFB; /* Change la couleur du texte */
+    text-shadow: 0 0 15px #61DAFB, 0 0 20px #61DAFB; /* Ajoute un effet de brillance */
+    transform: scale(1.05); /* Légère mise en avant */
 }
 
 .services-grid {
@@ -76,7 +76,7 @@
     transform: translateY(-10px);
 }
 
-.service-card h3 {
+.service-card h2 {
     font-family: 'Ysabeau SC', sans-serif;
     color: #fff;
     font-size: 24px;
@@ -142,6 +142,22 @@
 
 .link-devis:hover {
     background-color: white;
+}
+
+.fa-chart-bar, .fa-credit-card, .fa-network-wired {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2em;
+    color: #61DAFB;
+    border-radius: 50%;
+    width:60px;
+    height:60px;
+    border:5px solid #61DAFB;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:40px;
 }
 
 .time, .payment, .evolution {
@@ -210,20 +226,7 @@
     .services-title {
         font-size: 20px;
     }
-    @keyframes text {
-        0% {
-            color: linear-gradient(135deg, #0d0d0d, #292929);
-        }
-        30% {
-            letter-spacing: 8px;
-        }
-        85% {
-            letter-spacing: 2px;
-        }
-        100% {
-            letter-spacing: 2px;
-        }
-    }
+    
     .services-grid {
         width:96%;
         padding:2%;
@@ -237,6 +240,21 @@
         width: 90%;
         margin-bottom: 20px;
         padding: 5%;
+    }
+
+    .fa-chart-bar {
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.2em;
+        color: #61DAFB;
+        border-radius: 50%;
+        width:60px;
+        height:60px;
+        border:5px solid #61DAFB;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .time, .payment, .evolution {
