--- a/src/pages/Agency/agency.css
+++ b/src/pages/Agency/agency.css
@@ -9,6 +9,7 @@
     align-items: center;
     padding-top: 190px;
     font-family: 'Ysabeau SC', sans-serif;
+    margin: 0 auto;
 }
 
 .agency-container {
@@ -56,35 +57,57 @@
     color: #61DAFB;
     margin-top: 10px;
 }
+
+.agency-intro h2, .agency-intro p, .agency-intro ul {
+    margin-top: 10px;
+    overflow: hidden;
+}
+
+.agency-intro p, .agency-intro ul {
+    margin-left: 0;
+    text-align: left;
+    font-size: 1.2em;
+}
+
 .agency-benefits, .agency-process{
     list-style: none;
-    font-size: 1em;
-    line-height: 1.5em;
+    font-size: 1.2em;
+    line-height: 1.2em;
     margin: 10px 0;
     padding: 0%;
 }
-.biz-benefits , .biz-benefits , .process-steps, .agency-benefits, .agency-benefits {
+.agency-benefits , .process-steps{
     border-left: 3px solid #61DAFB
 }
 
 .agency-benefits li, .process-steps li {
-    line-height: 1.2em;
+    display: flex;
+    align-items: center;
+    line-height: 1em;
     font-size: 1em;
-
-}
-.agency-benefits ol li strong, .process-steps ol li strong {
-    display: inline-block;
-    vertical-align: middle;
-    line-height: 1.2em;
-    font-size: 1em;
-    font-weight: normal;
+    color:white;
+    margin-bottom: 10px;
 }
 
-.agency-benefits i, .agency-process i {
-    color:#61DAFB;
+
+.agency-benefits .fa-project-diagram,
+.agency-benefits .fa-code,
+.agency-benefits .fa-sync-alt,
+.agency-benefits .fa-users-cog,
+.process-steps .fa-briefcase,
+.process-steps .fa-tasks,
+.process-steps .fa-rocket,
+.process-steps .fa-chart-line {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #61DAFB;
     font-size: 1.2em;
-    margin-right:10px;
-    width:40px;
+    line-height: 1.2em;
+    padding:0;
+    margin-right: 15px;
+    width: 40px;
+    height: 40px;
     margin-left: 20px;
 }
 
@@ -92,9 +115,7 @@
     margin-left: 0;
     text-align: left;
     font-size: 1.2em;
-}
-li {
-    font-size: 1em;
+    color:white;
 }
 
 .agency-intro, .agency-process, .agency-contact {
@@ -106,7 +127,6 @@ li {
     box-shadow: 0 3px 4px #0d0d0d, inset 0 -2px 5px #0d0d0d,
     inset -4px 4px 15px rgba(255, 255, 255, 0.245), 0 0 0 2px #0d0d0d, 0 0 0 2px #0d0d0d,
     0 0 0 -1.5px #0d0d0d;
-    border: 2px solid black;
     padding: 10px;
     border-radius: 20px;
     background: #0d0d0d;
@@ -117,7 +137,7 @@ li {
     transition: background-color 0.3s ease, transform 0.3s ease; 
     position: relative;
     overflow: hidden;
-    margin: 20px auto 0 auto;
+    margin: 20px auto 40px auto;
     text-decoration: none;
 }
 
@@ -140,6 +160,7 @@ li {
     transform-origin: left;
 }
 
+
 .agency-contact-link:hover {
     background-color: #61DAFB; 
     transform: scale(1.05); 
@@ -158,6 +179,17 @@ li {
     opacity: 0;
     animation: fadeInUp 1s forwards;
     transition: opacity 0.3s ease-in-out;
+}
+
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 .agency-intro.fade-in {
@@ -193,10 +225,24 @@ li {
         line-height: 1.4em;
     }
 
+    .agency-benefits .fa-project-diagram,
+    .agency-benefits .fa-code,
+    .agency-benefits .fa-sync-alt,
+    .agency-benefits .fa-users-cog,
+    .process-steps .fa-briefcase,
+    .process-steps .fa-tasks,
+    .process-steps .fa-rocket,
+    .process-steps .fa-chart-line {
+        font-size: 15px;
+        width: 30px;
+        margin-right: 10px;
+    }
+
     .agency-contact-link {
         padding: 10px;
         font-size: 14px;
         border-radius: 15px;
+        margin-bottom: 40px;
     }
 
     /* Ajuste la taille du conteneur pour les petits écrans */
@@ -210,6 +256,28 @@ li {
         margin-bottom: 20px;
         padding: 0 10px;
     }
+
+    .agency-contact h2, .agency-contact p {
+        margin-top: 5px;
+    }
+
+        /* Réduction des icônes */
+        .agency-container .fa-building {
+            font-size: 1em;
+            width: 50px;
+            height: 50px;
+            border-width: 4px;
+        }
+    
+        /* Espacement entre les listes */
+        .agency-benefits li {
+            margin: 5px 0;
+            font-size: 15px;
+        }
+        .process-steps li {
+            margin: 5px 0;
+            font-size: 15px;
+        }
 }
 
 /* Styles spécifiques pour très petits écrans */
@@ -234,6 +302,17 @@ li {
     .agency-contact-link {
         padding: 8px;
         font-size: 12px;
+    }
+    /* Réduire davantage les icônes */
+    .agency-container .fa-building {
+        font-size: 0.9em;
+        width: 40px;
+        height: 40px;
+        border-width: 3px;
+    }
+
+    .agency-benefits li, .process-steps li {
+        font-size: 15px;
     }
 }
 
