--- a/src/pages/Business/business.css
+++ b/src/pages/Business/business.css
@@ -9,6 +9,7 @@
     align-items: center;
     padding-top: 190px;
     font-family: 'Ysabeau SC', sans-serif;
+    margin: 0 auto;
 }
 
 .business-container {
@@ -104,7 +105,8 @@
     margin:0px;
     padding: 0;
     text-align: left;
-    font-size: 1.2em;
+    font-size: 1em;
+    border-left: 3px solid #61DAFB;
 }
 
 .biz-benefits li, .process-steps li{
@@ -112,17 +114,13 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    line-height:1.2em;
-    font-size: 1.2em;
+    line-height:1em;
+    font-size: 1em;
     list-style: none;
     width:100%;
     text-align: left;
     margin: 10px 0;
     padding: 0;
-}
-
-.strong {
-    font-size: 1.2em;
 }
 
 .biz-benefits li .fa-chart-line, 
@@ -133,22 +131,18 @@
 .process-steps li .fa-rocket,
 .process-steps li .fa-handshake,
 .process-steps li .fa-chart-line {
-    font-size:1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size:1.2em;
     line-height: 1.2em;
     color:#61DAFB;
     border:none;
     padding:0;
     width:40px;
+    height:40px;
     margin:0 15px 0 20px;
     text-align: center;
-}
-
-.biz-benefits li strong, .process-steps li strong {
-    display: inline-block;
-    vertical-align: middle;
-    line-height: 1.2em;
-    font-size: 1em;
-    font-weight: normal;
 }
 
 .business-intro, .business-process, .business-contact {
@@ -161,7 +155,6 @@
     box-shadow: 0 3px 4px #0d0d0d, inset 0 -2px 5px #0d0d0d,
     inset -4px 4px 15px rgba(255, 255, 255, 0.245), 0 0 0 2px #0d0d0d, 0 0 0 2px #0d0d0d,
     0 0 0 -1.5px #0d0d0d;
-    border:2px solid black;
     padding:10px;
     border-radius: 20px;
     background: #0d0d0d;
@@ -172,7 +165,7 @@
     transition: background-color 0.3s ease, transform 0.3s ease; 
     position: relative;
     overflow: hidden;
-    margin:20px auto 0 auto;
+    margin:20px auto 40px auto;
     text-decoration: none;
 }
     
@@ -239,7 +232,8 @@
 /* Ajustements globaux pour mobile */
 @media (max-width: 768px) {
     .business-section {
-        padding: 190px 20px 0 20px;
+        width:96%;
+        padding-top: 190px;
     }
 
     .business-title {
@@ -269,15 +263,11 @@
         margin-right: 10px;
     }
 
-    .biz-benefits li strong,
-    .process-steps li strong {
-        font-size: 15px;
-    }
-
     .business-contact-link {
         padding: 10px;
         font-size: 14px;
         border-radius: 15px;
+        margin-bottom: 40px;
     }
 
     /* Ajuste la taille du conteneur pour les petits écrans */
@@ -319,7 +309,7 @@
 @media (max-width: 480px) {
     .business-section {
         width:94%;
-        padding: 190px 10px 0 10px;
+        padding-top: 190px;
     }
 
     .business-title {
