--- a/src/pages/Blog/blog.css
+++ b/src/pages/Blog/blog.css
@@ -1,112 +1,3 @@
-
-/*.blog-container {
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width:90%;
-    padding:  200px 5% 40px;
-    background-color: black;
-    color: white; 
-    margin: auto; 
-}
-
-.blog-title {
-    text-align: center;
-    font-size: 2.5em; 
-    margin-bottom: 20px;
-    font-family: 'Ysabeau SC', sans-serif;
-    color: #61DAFB; 
-}
-
-.blog-article {
-    border: 1px solid #444; 
-    padding: 15px;
-    margin-bottom: 15px;
-    border-radius: 8px; 
-    max-width: 800px;
-    box-shadow: 0 3px 4px rgb(0, 0, 0, 1), inset 0 -2px 5px rgba(0, 0, 0, 1),
-    inset 0 4px 15px rgba(255, 255, 255, 0.245), 0 0 0 2px #000, 0 0 0 5px #000000,
-    0 0 0 5.5px #080808;
-    padding:35px;
-    background:black;
-}
-
-.article-title {
-    font-size: 1.8em; 
-    font-family: 'Ysabeau SC', sans-serif;
-    color: #61DAFB; 
-}
-
-.article-date {
-    font-size: 0.9em;
-    color: #bbb; 
-    margin-bottom: 10px; 
-    font-family: 'Ysabeau SC', sans-serif;
-}
-
-.article-intro {
-    font-size: 1.5em; 
-    color: #eee; 
-    line-height: 1.5em; 
-    font-family: 'Ysabeau SC', sans-serif;
-    font-weight: 700;
-}
-
-.article-content {
-    font-size: 1.1em; 
-    color: #eee; 
-    line-height: 1.6; 
-    font-family: 'Ysabeau SC', sans-serif;
-}
-
-.article-sign {
-    font-size: 1.1em; 
-    color: #61DAFB;
-    line-height: 1.6; 
-    font-family: 'Ysabeau SC', sans-serif;
-}
-
-
-.error-message {
-    color: red; 
-}
-
-.box-title-id {
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.article-number {
-    display: flex;
-    border: 2px solid #61DAFB;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 50px;
-    font-size: 20px;
-    font-weight: bold;
-    color: #61DAFB;
-    border-radius: 50%;
-    margin-right: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-@media (max-width: 600px) {
-    .blog-title {
-        font-size: 2em;
-    }
-    .article-title {
-        font-size: 1.5em; 
-    }
-    .article-content {
-        font-size: 1em; 
-    }
-}*/
-
-/* Container du blog */
 .blog-container {
     display: flex;
     flex-direction: column;
@@ -119,16 +10,22 @@
     margin: auto;
 }
 
-/* Titre du blog */
 .blog-title {
     text-align: center;
     font-size: 2.5em;
     margin-bottom: 20px;
     font-family: 'Ysabeau SC', sans-serif;
     color: #61DAFB;
+    transition: transform 0.3s ease, text-shadow 0.3s ease;
 }
 
-/* Articles du blog */
+/* Effet de survol pour les titres */
+.blog-title:hover {
+    color: #61DAFB; /* Change la couleur du texte */
+    text-shadow: 0 0 15px #61DAFB, 0 0 20px #61DAFB; /* Ajoute un effet de brillance */
+    transform: scale(1.02); /* Légère mise en avant */
+}
+
 .blog-article {
     border: 1px solid #444;
     margin-bottom: 15px;
@@ -149,15 +46,14 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    transition: max-height 0.5s ease; /* Ajout de la transition fluide */
+    transition: max-height 0.5s ease; 
 }
 
-/* Transition pour afficher le contenu de l'article */
 .blog-article.expanded {
-    max-height: 3600px; /* Augmenter la hauteur maximale lors de l'ouverture */
+    max-height: 3600px;
 }
 
-/* Le texte "Lire +++" */
+
 .read-more {
     font-size: 1.2em;
     color: #61DAFB;
@@ -165,7 +61,15 @@
     right: 20px;
     top: 20px;
     cursor: pointer;
+    transition: transform 0.3s ease, text-shadow 0.3s ease;
 }
+
+.read-more:hover {
+    color: #61DAFB; /* Change la couleur du texte */
+    text-shadow: 0 0 10px #61DAFB, 0 0 15px #61DAFB; /* Ajoute un effet de brillance */
+    transform: scale(1.02); /* Légère mise en avant */
+}
+
 
 /* Le texte change au clic */
 .blog-article.expanded .read-more {
