--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -19,9 +19,9 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    max-width: 45%;
+    max-width: 40%;
     margin-bottom: 50px;
-    padding: 0;
+    padding: 20px;
 }
 
 .dashboard-link {
@@ -31,7 +31,6 @@
     align-items: center;
     width: 100%;
     height:130px;
-    padding: 20px;
     background-color: black;
     text-align: center;
     text-decoration: none;
@@ -45,7 +44,7 @@
     0 0 0 5.5px #080808;
     padding:35px;
     background:black;
-
+    margin-left:-10px;
 }
 
 .dashboard-link h2 {
