--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -6,7 +6,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    margin: 0 auto;
+    margin: 0px auto 0;
     padding: 0;
     background: black;
     overflow: hidden;
@@ -33,14 +33,27 @@
 }
 
 .container-txt {
-    display: flex;
+    /*display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     text-align: left;
     width: 380px;
     height:380px;
-    padding:0;
+    padding:0;*/
+    width: 50%;
+    height:375px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    animation: zoomIn 2.5s ease-in-out;
+    border-radius: 8px;
+    box-shadow: 0 3px 4px rgb(0, 0, 0, 1), inset 0 -2px 5px rgba(0, 0, 0, 1),
+    inset 0 4px 15px rgba(255, 255, 255, 0.245), 0 0 0 2px #000, 0 0 0 5px #000000,
+    0 0 0 5.5px #080808;
+    padding:15px;
+    background:black;
 }
 
 
@@ -218,9 +231,14 @@
     .subtitle-hero {
         font-size: 30px;
     }
-    .asset-hero {
+    .asset-hero{
         width:320px;
         height:auto;
+        padding: 2%;
+    }
+    .container-txt {
+        width:320px;
+        height:220px;
         padding: 2%;
     }
 }
@@ -249,6 +267,12 @@
     .asset-hero {
         width:320px;
         height:auto;
+        padding: 2%;
+    }
+
+    .container-txt {
+        width:320px;
+        height:220px;
         padding: 2%;
     }
 }
@@ -287,9 +311,13 @@
     }
 
     .container-txt {
-        align-items: center;
+        /*align-items: center;
         width: 100%;
-        height:180px;
+        height:180px;*/
+        width:90%;
+        margin-top: 30px;
+        justify-content: center;
+        box-shadow: none;
     }
 
     .container-screens {
