--- a/src/components/Logo3/logo3.css
+++ b/src/components/Logo3/logo3.css
@@ -1,5 +1,8 @@
 
 .logo3-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
     padding: 0%;
     width:500px; 
@@ -9,8 +12,9 @@
 }
 
 .logo3-video {
-    width: 100%; 
-    height: 100%; 
+    margin: 0 auto;
+    width: 80%; 
+    height: auto; 
     object-fit: cover; 
 }
 
