--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -318,6 +318,7 @@
         transform: none !important;
         transition:none !important;
         box-shadow: none !important;
+        border:none !important;
     }
 
     .container-screens {
