--- a/src/components/Plan/plan.css
+++ b/src/components/Plan/plan.css
@@ -13,6 +13,7 @@
     box-shadow: 0 3px 4px rgb(0, 0, 0, 1), inset 0 -2px 5px rgba(0, 0, 0, 1),
     inset 0 4px 15px rgba(255, 255, 255, 0.245), 0 0 0 2px #000, 0 0 0 5px #000000,
     0 0 0 5.5px #080808;
+    border: 1px solid rgba(169, 169, 169, 0.215);
 }
 
 .site-map-section h2, .legal-notice-section h2, .privacy-policy-section h2, .terms-of-service-section h2 {
