--- a/src/components/Promo/promo.css
+++ b/src/components/Promo/promo.css
@@ -25,6 +25,7 @@
     align-items: center;
     margin:0;
     padding: 0;
+    border: 1px solid rgba(169, 169, 169, 0.215);
 }
 
 .container-promo .fa-percent {
