--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -167,6 +167,7 @@
     inset 0 4px 15px rgba(255, 255, 255, 0.245), 0 0 0 2px #000, 0 0 0 5px #000000,
     0 0 0 5.5px #080808;
     padding:15px;
+    border: 1px solid rgba(169, 169, 169, 0.215);
 }
 
 .one-specification:hover {
