--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -21,6 +21,30 @@
     transform: translateY(0);
 }
 
+.container-portrait {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    overflow: hidden;
+    border: 1px solid rgba(68, 68, 68, 0.215);
+    box-shadow: 0 3px 4px rgb(0, 0, 0, 1), inset 0 -2px 5px rgba(0, 0, 0, 1),
+    inset 0 4px 15px rgba(255, 255, 255, 0.245), 0 0 0 2px #000, 0 0 0 5px #000000,
+    0 0 0 5.5px #080808;
+    padding:15px;
+    background:black;
+}
+
+.me {
+    width:100%;
+    height:100%;
+    border-radius: 100%;
+    object-fit: cover;
+}
+
 .content-about {
     margin: 0 auto;
     display: flex;
