--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -61,149 +61,47 @@
     transform: scale(0.98);
 }
 
-
-.we-are {
-    position: relative;
-    background: linear-gradient(90deg, #000, #fff, #000);
-    background-repeat: no-repeat;
-    background-size: 80%;
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: rgba(255, 255, 255, 0.505);
-    font-size: 32px;
-    line-height: 32px;
-    font-weight: 500;
-    font-family: 'Ysabeau SC', sans-serif;
-    margin-top: 0px;
-    margin-bottom: 20px;
-    white-space: nowrap;
-    overflow: hidden;
-    display: inline-block;
-    animation: typing1 2s steps(23, end), animate1 2s linear infinite;
+.meawc {
+    object-fit: cover;
+    min-width: 300px;
+    width:100%;
+    height:100%;
+    border-radius: 8px;
+    filter: brightness(0.9);
 }
 
-@keyframes animate1 {
-    0% {
-        background-position: -500%;
-    }
-    100% {
-        background-position: 500%;
-    }
+.right-icon {
+    width:70px;
+    height:70px;
+    object-fit: cover;
 }
-
-@keyframes typing1 {
-    from { 
-        width: 0; 
-    }
-    to { 
-        width: 100%; 
-    }
-}
-
-
-
-.title-hero {
-    position: relative;
-    background: linear-gradient(90deg, #000, #fff, #000);
-    background-repeat: no-repeat;
-    background-size: 80%;
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: rgba(255, 255, 255, 0.505);
-    font-size: 32px;
-    line-height: 32px;
-    font-weight: 500;
-    text-align: center;
-    font-family: 'Ysabeau SC', sans-serif;
-    margin-top: 0px;
-    margin-bottom: 20px;
-    white-space: nowrap;
-    overflow: hidden;
-    display: inline-block;
-    opacity: 0;
-    animation: typing2 2s steps(20, end)2s forwards, animate2 2s linear infinite;
-}
-
-@keyframes typing2 {
-    from { 
-        width: 0; 
-        opacity:0;
-    }
-    to { 
-        width: 100%; 
-        opacity:1;
-    }
-}
-
-@keyframes animate2 {
-    0% {
-        background-position: -500%;
-    }
-    100% {
-        background-position: 500%;
-    }
-}
-
-.subtitle-hero {
-    position: relative;
-    background: linear-gradient(90deg, #000, #fff, #000);
-    background-repeat: no-repeat;
-    background-size: 80%;
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: rgba(201, 201, 201, 0.505);
-    font-size: 32px;
-    line-height: 32px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    font-family: 'Ysabeau SC', sans-serif;
-    white-space: nowrap;
-    overflow: hidden;
-    display: inline-block;
-    opacity: 0;
-    animation: typing3 2s steps(33, end)4s forwards, animate3 2s linear infinite;
-}
-
-@keyframes typing3 {
-    from { 
-        width: 0; 
-        opacity:0;
-    }
-    to { 
-        width: 100%; 
-        opacity:1;
-    }
-}
-
-@keyframes animate3 {
-    0% {
-        background-position: -500%;
-    }
-    100% {
-        background-position: 500%;
-    }
-}
-
-
 
 .container-screens {
-    width: 50%;
+    width: 42%;
+    height:375px;
     display: flex;
-    justify-content: flex-end;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
     animation: zoomIn 2.5s ease-in-out;
-}
-
-.asset-hero {
-    width: 500px;
-    height: 375px;
-    border-radius: 8px;
     border: 1px solid rgba(169, 169, 169, 0.215);
+    border-radius: 8px;
     box-shadow: 0 3px 4px rgb(0, 0, 0, 1), inset 0 -2px 5px rgba(0, 0, 0, 1),
     inset 0 4px 15px rgba(255, 255, 255, 0.245), 0 0 0 2px #000, 0 0 0 5px #000000,
     0 0 0 5.5px #080808;
     padding:15px;
     background:black;
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
+
+}
+
+.asset-hero {
+    width: 100%;
+    min-width: 300px;
+    height: 100%;
+    border-radius:8px;
+    object-fit: cover;
+    filter: brightness(0.9);
 }
 
 .container-hero::before {
@@ -226,26 +124,11 @@
     .box-hero {
         width:70%;
     }
-    .we-are {
-        font-size: 30px;
-    }
     
-    .title-hero {
-        font-size: 30px;
-    }
-
-    .subtitle-hero {
-        font-size: 30px;
-    }
-    .asset-hero{
-        width:320px;
-        height:auto;
-        padding: 2%;
-    }
-    .container-txt {
+    .container-txt, .container-screens {
         width:320px;
         height:220px;
-        padding: 2%;
+        padding: 10px;
     }
 }
 
@@ -258,28 +141,10 @@
         width:75%;
     }
 
-    .we-are {
-        font-size: 30px;
-    }
-    
-    .title-hero {
-        font-size: 30px;
-    }
-
-    .subtitle-hero {
-        font-size: 30px;
-    }
-
-    .asset-hero {
-        width:320px;
-        height:auto;
-        padding: 2%;
-    }
-
-    .container-txt {
+    .container-txt, .container-screens {
         width:320px;
         height:220px;
-        padding: 2%;
+        padding: 10px;
     }
 }
 
@@ -291,18 +156,6 @@
     .box-hero {
         width: 90%;
         padding:3%;
-    }
-
-    .we-are {
-        font-size: 30px;
-    }
-    
-    .title-hero {
-        font-size: 30px;
-    }
-
-    .subtitle-hero {
-        font-size: 30px;
     }
 }
 
@@ -317,48 +170,31 @@
     }
 
     .container-txt {
-        /*align-items: center;
-        width: 100%;
-        height:180px;*/
+        height:450px;
         width:90%;
         margin-top: 30px;
         justify-content: center;
-        box-shadow: none;
-        border:none;
+        align-items: center;
+    }
+    .container-screens {
+        height:450px;
+        width:90%;
+        justify-content: center;
+        align-items: center;
     }
 
-    .container-txt:hover {
+    .container-txt:hover, .container-screens:hover {
         box-shadow: none;
         transform: none;
         border:none;
     }
 
-    .container-screens {
-        width:90%;
-        margin-top: 30px;
-        justify-content: center;
-    }
-
-    .we-are {
-        font-size: 25px;
-        text-align: center;
-    }
-    
-    .title-hero {
-        text-align: center;
-        font-size: 25px;
-    }
-
-    .subtitle-hero {
-        font-size: 25px;
-        text-align:center;
-    }
-
-    .asset-hero {
-        width:100%;
-        height:auto;
-        padding: 2%;
-    }
+    .right-icon {
+    transform: rotate(90deg); 
+    width:70px;
+    height:70px;
+    object-fit: cover;
+}
 }
 
 
