--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -50,7 +50,7 @@
     transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
 
-.container-txt:hover, .asset-hero:hover {
+.container-txt:hover, .container-screens:hover {
     box-shadow: 
         inset 0 5px 15px rgba(0, 0, 0, 0.8),  /* Ombre principale en haut pour effet enfoncé */
         inset 0 -5px 20px rgba(255, 255, 255, 0.1),  /* Ombre en bas pour l'effet de lumière */
